--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -117,8 +117,8 @@ executable day07
     main-is:          Main.hs
     build-depends:    base
                      ,Common
-					 ,containers
-					 ,split
+                     ,containers
+                     ,split
     hs-source-dirs:   day07
     default-language: Haskell2010
     ghc-options:      -Wall
@@ -135,6 +135,22 @@ executable day08
     build-depends:    base
                      ,Common
     hs-source-dirs:   day08
+    default-language: Haskell2010
+    ghc-options:      -Wall
+                      -Wcompat
+                      -Widentities
+                      -Wincomplete-uni-patterns
+                      -Wincomplete-record-updates
+                      -Wredundant-constraints
+                      -Wpartial-fields
+                      -Wunused-packages
+
+executable day09
+    main-is:          Main.hs
+    build-depends:    base
+                     ,Common
+                     ,containers
+    hs-source-dirs:   day09
     default-language: Haskell2010
     ghc-options:      -Wall
                       -Wcompat
