--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -210,7 +210,7 @@ executable day13
     main-is:          Main.hs
     build-depends:    base
                      ,Common
-					 ,containers
+                     ,containers
     hs-source-dirs:   day13
     default-language: Haskell2010
     ghc-options:      -Wall
@@ -256,7 +256,7 @@ executable day16
     main-is:          Main.hs
     build-depends:    base
                      ,Common
-					 ,containers
+                     ,containers
     hs-source-dirs:   day16
     default-language: Haskell2010
     ghc-options:      -Wall
@@ -302,8 +302,23 @@ executable day19
     main-is:          Main.hs
     build-depends:    base
                      ,Common
-					 ,containers
+                     ,containers
     hs-source-dirs:   day19
+    default-language: Haskell2010
+    ghc-options:      -Wall
+                      -Wcompat
+                      -Widentities
+                      -Wincomplete-uni-patterns
+                      -Wincomplete-record-updates
+                      -Wredundant-constraints
+                      -Wpartial-fields
+                      -Wunused-packages
+
+executable day20
+    main-is:          Main.hs
+    build-depends:    base
+                     ,Common
+    hs-source-dirs:   day20
     default-language: Haskell2010
     ghc-options:      -Wall
                       -Wcompat
