--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -8,6 +8,7 @@ library Common
     exposed-modules:  Common, Vec
     build-depends:    base
                      ,directory
+                     ,containers
     hs-source-dirs:   common
     default-language: Haskell2010
     ghc-options:      -Wall
@@ -351,6 +352,22 @@ executable day22
                      ,Common
                      ,containers
     hs-source-dirs:   day22
+    default-language: Haskell2010
+    ghc-options:      -Wall
+                      -Wcompat
+                      -Widentities
+                      -Wincomplete-uni-patterns
+                      -Wincomplete-record-updates
+                      -Wredundant-constraints
+                      -Wpartial-fields
+                      -Wunused-packages
+
+executable day23
+    main-is:          Main.hs
+    build-depends:    base
+                     ,Common
+                     ,containers
+    hs-source-dirs:   day23
     default-language: Haskell2010
     ghc-options:      -Wall
                       -Wcompat
